--- a/app/src/main/res/layout/activity_add__item.xml
+++ b/app/src/main/res/layout/activity_add__item.xml
@@ -154,7 +154,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
         <Spinner
             android:id="@+id/category_spinner"
-            android:layout_width="220dp"
+            android:layout_width="200dp"
             android:layout_height="30dp"
             android:layout_marginTop="90dp"
 
@@ -197,25 +197,78 @@
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <EditText
-        android:id="@+id/mobilenoEditText"
-        android:layout_width="274dp"
-        android:layout_height="32dp"
-        android:layout_below="@+id/textView2"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="470dp"
-        android:textSize="15dp"
-        android:background="@drawable/border_table"
-        android:hint="Enter mobile no."
-         />
+        <EditText
+            android:id="@+id/mobilenoEditText"
+            android:layout_width="274dp"
+            android:layout_height="32dp"
+            android:layout_below="@+id/textView2"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="470dp"
+            android:maxLength="10"
+            android:inputType="number"
+            android:background="@drawable/border_table"
+            android:hint="Enter mobile no."
+            android:textSize="15dp" />
+        <TextView
+            android:id="@+id/additem_quan"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView2"
+            android:layout_marginLeft="10dp"
+            android:layout_below="@+id/textView2"
+            android:textSize="15dp"
+            android:layout_marginTop="530dp"
+            android:text="Quantity:"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <EditText
+            android:id="@+id/additem_quanET"
+            android:layout_width="274dp"
+            android:layout_height="32dp"
+            android:layout_below="@+id/textView2"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="530dp"
+
+            android:inputType="number"
+            android:background="@drawable/border_table"
+            android:hint="Enter quantity"
+            android:textSize="15dp" />
+        <TextView
+            android:id="@+id/additem_date"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView2"
+            android:layout_marginLeft="10dp"
+            android:layout_below="@+id/textView2"
+            android:textSize="15dp"
+            android:layout_marginTop="590dp"
+            android:text="Date:"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <EditText
+            android:id="@+id/additem_dateET"
+            android:layout_width="274dp"
+            android:layout_height="32dp"
+            android:layout_below="@+id/textView2"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="590dp"
+
+            android:inputType="number"
+            android:background="@drawable/border_table"
+            android:hint="Enter date"
+            android:textSize="15dp" />
 
 
-    <Button
+
+
+        <Button
         android:id="@+id/submit_item"
         android:layout_width="210dp"
         android:layout_height="37dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="550dp"
+        android:layout_marginTop="650dp"
 
         android:gravity="center"
         android:text="SUBMIT "
