--- a/app/src/main/res/layout/activity_cables_activity.xml
+++ b/app/src/main/res/layout/activity_cables_activity.xml
@@ -41,7 +41,7 @@
             android:textSize="13dp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="16dp"
-            android:id="@+id/monitor_LCD"/>
+            android:id="@+id/cable_type2"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             android:textSize="13dp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="16dp"
-            android:id="@+id/monitor_LED"/>
+            android:id="@+id/cable_type3"/>
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
