--- a/app/src/main/res/layout/activity_printer_activity.xml
+++ b/app/src/main/res/layout/activity_printer_activity.xml
@@ -61,14 +61,9 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
+            android:layout_marginTop="20dp"
             android:layout_height="match_parent">
-            <TableLayout
-               android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                >
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -78,72 +73,64 @@
                 android:text="Printer Type :"
                 android:textSize="15dp"
                 android:textStyle="bold" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
-              android:layout_marginRight="150dp">
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:paddingTop="13dp">
-                    <CheckBox
-                        android:id="@+id/printer_type1"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Black/White Laser"
-                        android:textSize="13dp" />
-                    <CheckBox
-                        android:id="@+id/printer_type2"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Black/White Laser"
-                        android:textSize="13dp" />
 
 
 
 
+            <CheckBox
+                android:id="@+id/printer_type1"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:text="Black/White Laser"
+                android:textSize="13dp" />
+            <CheckBox
+                android:id="@+id/printer_type2"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:text="Black/White Laser"
+                android:textSize="13dp" />
 
 
-                </TableRow>
 
-                <TableRow
-                    android:layout_width="311dp"
-                    android:layout_height="fill_parent">
-
-                    <CheckBox
-                        android:id="@+id/printer_type3"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Black/White Laser"
-                        android:textSize="13dp" />
-
-                    <CheckBox
-                        android:id="@+id/printer_type4"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Color Laser"
-                        android:textSize="13dp" />
-
-
-                </TableRow>
-            </TableLayout>
         </LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <CheckBox
+                android:id="@+id/printer_type3"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="120dp"
+                android:layout_marginTop="10dp"
+                android:text="Black/White Laser"
+                android:textSize="13dp" />
+
+            <CheckBox
+                android:id="@+id/printer_type4"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:text="Color Laser"
+                android:textSize="13dp" />
+        </LinearLayout>
+
+
+
+
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:text="Submit"
+            android:layout_marginTop="50dp"
             android:id="@+id/printer_subbtn1"
             android:layout_gravity="center"/>
 
