--- a/app/src/main/res/layout/activity_ram_activity.xml
+++ b/app/src/main/res/layout/activity_ram_activity.xml
@@ -27,77 +27,88 @@
             android:text="Types Of RAM:"
             android:textSize="15dp"
             android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SRAM"
-        android:textSize="13dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:id="@+id/RAM_type1"/>
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DRAM"
-        android:textSize="13dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:id="@+id/RAM_type2"/>
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="13dp"
-        android:layout_marginTop="10dp"
-        android:text="SDRAM"
-        android:layout_marginLeft="16dp"
-        android:id="@+id/RAM_type3"/>
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DDR"
-        android:textSize="13dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:id="@+id/RAM_type4"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:text="SDRAM"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/RAM_type5"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DDR2"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/RAM_type6"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DDR3"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/RAM_type7"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DDR4"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/RAM_type8"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SRAM"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/RAM_type1"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DRAM"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/RAM_type2"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"
+                android:text="SDRAM"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/RAM_type3"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DDR"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/RAM_type4"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"
+                android:text="SDRAM"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/RAM_type5"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DDR2"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/RAM_type6"/>
+            <CheckBox
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DDR3"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/RAM_type7"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DDR4"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/RAM_type8"/>
+        </LinearLayout>
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:text="Submit"
+            android:layout_marginTop="50dp"
             android:id="@+id/RAM_subbtn1"
             android:layout_gravity="center"/>
     </LinearLayout>
+
 
 </ScrollView>
