--- a/app/src/main/res/layout/activity_reject.xml
+++ b/app/src/main/res/layout/activity_reject.xml
@@ -31,7 +31,7 @@
         android:layout_width="140dp"
         android:layout_height="45dp"
         android:layout_marginLeft="120dp"
-
+        android:id="@+id/reject_scan"
         android:layout_marginTop="90dp"
 
         android:gravity="center"
@@ -65,9 +65,9 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/damage_resnET"
+                android:id="@+id/reject_resonET"
                 android:layout_width="200dp"
-                android:layout_height="25dp"
+                android:layout_height="35dp"
                 android:layout_marginTop="90dp"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/border_table"
@@ -87,7 +87,7 @@
         android:layout_width="250dp"
         android:layout_height="42dp"
         android:layout_marginLeft="70dp"
-
+        android:id="@+id/reject_subtn"
         android:layout_marginTop="280dp"
 
         android:gravity="center"
