--- a/app/src/main/res/layout/activity_scanner_activity.xml
+++ b/app/src/main/res/layout/activity_scanner_activity.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductDetail.Mouse_activity">
+    tools:context=".ProductDetail.Scanner_activity">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Mouse details "
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:background="#F77F76"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scanner Details "
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:background="#F77F76"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,65 +29,42 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Logitech"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/mouse_compyname1"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="A4Tech"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/mouse_compyname2"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Zebronics"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/mouse_compyname3"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="HP"
             android:textSize="13dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
-            android:id="@+id/mouse_compyname4"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mouse Type :"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="16dp"/>
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Wire"
-        android:textSize="13dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="16dp"
-        android:id="@+id/mouse_wire"/>
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Wireless"
-        android:textSize="13dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:id="@+id/mouse_wireless"/>
+            android:id="@+id/scanner_compyname1"/>
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Canon"
+            android:textSize="13dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/scanner_compyname2"/>
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Samsung"
+            android:textSize="13dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/scanner_compyname3"/>
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Brother"
+            android:textSize="13dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/scanner_compyname4"/>
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:text="Submit"
-            android:id="@+id/mouse_subbtn1"
+            android:layout_marginTop="20dp"
+            android:id="@+id/scanner_subbtn1"
             android:layout_gravity="center"/>
-</LinearLayout>
+    </LinearLayout>
 
 </ScrollView>
