--- a/app/src/main/res/layout/activity_sign__up.xml
+++ b/app/src/main/res/layout/activity_sign__up.xml
@@ -169,6 +169,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Enter date of birth"
+            android:inputType="number"
             android:textSize="15dp"
 
 
@@ -208,7 +209,7 @@
     <Button
         android:id="@+id/signup_submit"
         android:layout_width="210dp"
-        android:layout_height="37dp"
+        android:layout_height="47dp"
         android:layout_marginLeft="90dp"
         android:layout_marginTop="490dp"
         android:gravity="center"
