--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -58,15 +58,15 @@
 
                 <TextView
                     android:id="@+id/ITEM_Category"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="20dp"
+                    android:layout_height="45dp"
                     android:text="ITEM Category:"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
                 <Spinner
-                    android:id="@+id/add_item_spinner"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/stockin_spinner"
+                    android:layout_width="220dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="1dp"
                     android:entries="@array/select"></Spinner>
@@ -89,7 +89,7 @@
 
                 <EditText
                     android:id="@+id/additem_nameET"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="28dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter Item Name"
@@ -114,6 +114,7 @@
                     android:id="@+id/additem_modelnoET"
                     android:layout_width="match_parent"
                     android:layout_height="28dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter model no"
                     android:textSize="15dp" />
@@ -127,8 +128,8 @@
 
                 <TextView
                     android:id="@+id/add_item_storgloc"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="35dp"
                     android:text="Storage Location:"
                     android:textSize="15dp"
                     android:textStyle="bold" />
@@ -137,6 +138,7 @@
                     android:id="@+id/additem_storageLocaET"
                     android:layout_width="match_parent"
                     android:layout_height="28dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter storage location"
                     android:textSize="15dp" />
@@ -161,6 +163,7 @@
                     android:layout_height="28dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter date"
+                    android:layout_marginTop="10dp"
                     android:inputType="number"
 
                     android:textSize="15dp" />
@@ -186,6 +189,7 @@
                     android:layout_height="28dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter bill no. "
+                    android:layout_marginTop="10dp"
                     android:inputType="number"
 
                     android:textSize="15dp" />
@@ -209,6 +213,7 @@
                     android:id="@+id/additem_suppID"
                     android:layout_width="match_parent"
                     android:layout_height="28dp"
+                    android:layout_marginTop="10dp"
 
                     android:background="@drawable/border_table"
                     android:hint="Enter Supplier ID"
@@ -234,9 +239,10 @@
                     android:id="@+id/additem_snameET"
                     android:layout_width="match_parent"
                     android:layout_height="28dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/border_table"
 
-                    android:hint="Enter Suppliername "
+                    android:hint="Enter Supplier name "
 
                     android:textSize="15dp" />
             </TableRow>
@@ -262,6 +268,7 @@
                     android:width="100px"
                     android:background="@drawable/border_table"
                     android:hint="Enter contact no"
+                    android:layout_marginTop="10dp"
                     android:inputType="number"
                     android:maxLength="10"
 
@@ -288,6 +295,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="28dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter address"
                     android:textSize="15dp" />
@@ -303,7 +311,7 @@
 
                 <TextView
                     android:id="@+id/availableQuantity"
-                    android:layout_width="match_parent"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="Available Quantity:"
                     android:textSize="15dp"
@@ -317,6 +325,7 @@
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
                     android:hint=""
+                    android:layout_marginTop="10dp"
                     android:inputType="number"
                     android:textSize="15dp"
                     />
@@ -357,8 +366,8 @@
             android:id="@+id/additem_opnbtn"
             android:layout_width="90dp"
             android:layout_height="32dp"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="610dp"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="710dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -369,16 +378,16 @@
             android:layout_width="40dp"
             android:layout_height="30dp"
             android:layout_marginLeft="313dp"
-            android:layout_marginTop="610dp"
+            android:layout_marginTop="720dp"
             android:onClick="addStockIn"
             android:src="@drawable/plus_button" />
 
         <Button
             android:id="@+id/add_item_Submitbtn"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_width="160dp"
+            android:layout_height="45dp"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="650dp"
+            android:layout_marginTop="740dp"
             android:gravity="center"
             android:text="Submit" />
 
