--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     android:layout_width="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
-    android:layout_height="250dp">
+    android:layout_height="200dp">
     <Button
         android:id="@+id/inbtn"
         android:layout_width="120dp"
@@ -32,5 +32,21 @@
 
 
 </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="253dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="400dp">
+
+        <ImageView
+            android:layout_width="320dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/stockmanag3" />
+    </FrameLayout>
+
 
 </RelativeLayout>
