--- a/app/src/main/res/layout/activity_scanner_activity.xml
+++ b/app/src/main/res/layout/activity_scanner_activity.xml
@@ -29,7 +29,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HP"
+            android:text="Epson"
             android:textSize="13dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
