--- a/app/src/main/res/layout/activity_stock__out.xml
+++ b/app/src/main/res/layout/activity_stock__out.xml
@@ -80,9 +80,9 @@
 
                 <TextView
                     android:id="@+id/itemname"
-                    android:layout_width="match_parent"
+                    android:layout_width="20dp"
                     android:layout_height="wrap_content"
-                    android:text="ITEM name :"
+                    android:text="Company name :"
                     android:textSize="15dp"
 
                     android:textStyle="bold" />
@@ -93,7 +93,7 @@
                     android:layout_height="28dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter item name"
+                    android:hint="Enter name"
                     android:textSize="15dp"
 
 
@@ -357,7 +357,7 @@
             android:layout_width="90dp"
             android:layout_height="32dp"
             android:layout_marginLeft="110dp"
-            android:layout_marginTop="669dp"
+            android:layout_marginTop="677dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -367,7 +367,7 @@
             android:layout_height="30dp"
             android:src="@drawable/plus_button"
             android:layout_marginLeft="314dp"
-            android:layout_marginTop="669dp"
+            android:layout_marginTop="677dp"
             android:id="@+id/stockout_img"
             android:onClick="addstockOut"
 
@@ -376,7 +376,7 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
-            android:layout_marginTop="700dp"
+            android:layout_marginTop="730dp"
             android:gravity="center"
             android:id="@+id/stockout_submitbtn"
             android:layout_marginLeft="130dp"
