--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -83,7 +83,7 @@
                     android:id="@+id/additem_name"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:text="ITEM Name:"
+                    android:text="Company Name:"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
@@ -92,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="28dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter Item Name"
+                    android:hint="Enter name"
                     android:textSize="15dp" />
 
             </TableRow>
